# geodata-webcrawler

./: .env  README.md  config.ini  config.py  main.py  pyproject.toml  requirements.txt  test.py
R/: operation_detail_crawler.R  resume_data_crawler.R  resume_land_info_crawler.R
R/archived/: get_land_data_from_resume_data.R  get_land_geometry.R  get_operation_data_from_resume_data.R  get_taft_land_satellite_data.R  resume_data_and_operation_detail_prcoessing.R  resume_data_crawler.R
crawler/: config.ini  config.py  land_satellite_crawler.py  land_satellite_schedule.py  operation_detail_crawler.py  resume_data_crawler.py  resume_land_info_crawler.py
src/: land_satellite_crawler.py  operation_detail_crawler.py  resume_data_crawler.py  resume_land_info_crawler.py
