[tool.poetry]
name = "raw-crawler-taft"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^1.0.1"
sqlalchemy = "^2.0.31"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
datetime = "^5.5"
requests = "^2.32.3"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
